[package]

name = "twitter-api"
version = "0.4.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/twitter-api-rs"
description = "Unofficial Rust library for the Twitter API."
documentation = "https://gifnksm.github.io/twitter-api-rs"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
oauth-client = { git = "https://github.com/pbzweihander/oauth-client-rs", branch = "reqwest-0.9" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
